<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="35dp"
            android:src="@drawable/logo_app"/>

        <TextView
            android:id="@+id/ingresar_fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:text="@string/ingrese_fecha"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/edit_fecha"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/colorWhite"
            android:gravity="center"
            android:hint="@string/fecha_app"
            android:textColorHint="@color/colorWhite"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btn_calcular"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorBlue"
            android:textSize="17sp"
            android:text="@string/btn_calcular"/>

        <TextView
            android:id="@+id/ultimo_calculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/txt_ultimo_calculo"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/diferencia_edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginBottom="50dp"
            android:text="@string/txt_diferencia_edad"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"/>

    </LinearLayout>
</ScrollView>